got turbo working for DEs also